2023-03-09  Karl Berry  <karl@tug.org>

	* TL'23 release.

2023-01-01  Akira Kakuto  <kakuto@jcom.zaq.ne.jp>

	* printversion.c: Update copyright year.

2022-12-22  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* texmfmp.c:
	Accept file names with JIS X 0208 characters
	in `(e)(u)ptex --kanji-internal={euc,sjis}`.
	https://github.com/texjporg/tex-jp-build/issues/136

2022-06-12  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* texmfmp.c:
	Support guessing input file encodings for pTeX family.
	https://github.com/texjporg/tex-jp-build/issues/142

2022-04-25  Karl Berry  <karl@freefriends.org>

	* texmfmp.c (find_input_file): doc fix.

2022-03-21  Karl Berry  <karl@tug.org>

	* TL'22 release.

2022-03-08  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* texmfmp.c: Convert filename to utf8 in find_input_file for pTeX.
	  https://github.com/texjporg/tex-jp-build/issues/45

2022-03-03  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* texmfmp.c: Convert the argument of runpopen to utf8 for pTeX.
	  https://github.com/texjporg/tex-jp-build/issues/81

2022-01-22  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* openclose.c (open_input): Reencode nameoffile to utf8 for pTeX.
	* texmfmp.c: Change type of str_pool to unsigned short for pTeX.
	  We use only 0--511, and use flag 0x100 for Japanese char.
	  https://github.com/texjporg/tex-jp-build/issues/81

2022-01-01  Akira Kakuto  <kakuto@jcom.zaq.ne.jp>

	* printversion.c: Update copyright year.

2021-07-25  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* texmfmp.c: Apply patch of W32TeX for Visual Studio 2015
	by Kakuto-san.

2021-05-18  Karl Berry  <karl@freefriends.org>

	* usage.c (usagehelp): if bug_email arg ends in "@tug.org"
	also output the url for the mailing list.

2021-04-28  Marcel Fabian Krueger  <tex@2krueger.de>
	    Hironori KITAGAWA <h_kitagawa2001@yahoo.co.jp>
	    Karl Berry <karl@freefriends.org>

	* texmfmp.c (calledit): When looking for the filename to edit,