@@ -1,4 +1,4 @@
-dnl $Id: version.ac 65770 2023-02-09 21:26:50Z karl $
+dnl $Id: version.ac 66596 2023-03-19 22:16:03Z karl $
 dnl   Copyright 2022-2023 Japanese TeX Development Community <issue@texjp.org>
 dnl   Copyright 2016-2022 Karl Berry <tex-live@tug.org>
 dnl   Copyright 2011-2015 Peter Breitenlohner <tex-live@tug.org>
@@ -11,4 +11,4 @@ dnl Keep package and shared library versions the same;
 dnl see kpathsea/version.ac.
 dnl
 dnl This file is m4-included from configure.ac.
-m4_define([ptexenc_version], [1.4.3])
+m4_define([ptexenc_version], [1.4.4/dev])
