@@ -7,7 +7,7 @@ use strict; use warnings;
 
 package TeXLive::TLUtils;
 
-my $svnrev = '$Revision: 66236 $';
+my $svnrev = '$Revision: 66420 $';
 my $_modulerevision = ($svnrev =~ m/: ([0-9]+) /) ? $1 : "unknown";
 sub module_revision { return $_modulerevision; }
 
@@ -718,8 +718,9 @@ if status was nonzero. Throw away stdout and stderr.
 =cut
 
 sub system_ok {
+  my $nulldev = nulldev();
   my ($cmdline) = @_;
-  `$cmdline >/dev/null 2>&1`;
+  `$cmdline >$nulldev 2>&1`;
   return $? == 0;
 }
 
